--- a/.github/workflows/Newifi3-Lean.yml
+++ b/.github/workflows/Newifi3-Lean.yml
@@ -41,7 +41,7 @@ jobs:
 
     steps:
     - name: 校验本地文件
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: 初始化编译环境
       env:
