--- a/.github/workflows/SP+Newifi3-Lean+.yml
+++ b/.github/workflows/SP+Newifi3-Lean+.yml
@@ -123,10 +123,10 @@ jobs:
         df -hT
 
     - name: 上传BIN目录
-      uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@v3
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: Lean+_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: openwrt/bin
 
     - name: 查看目录树
@@ -144,7 +144,7 @@ jobs:
         echo "::set-output name=status::success"
 
     - name: 上传固件
-      uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@v3
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         name: Lean+_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
